--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.25)
+cmake_minimum_required(VERSION 3.23)
 project(opengl_base)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -8,6 +8,8 @@ find_package(GLEW REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(glm REQUIRED)
 find_package(assimp CONFIG REQUIRED)
+
+include_directories(libs/stb)
 
 add_executable(opengl_base src/main.cpp)
 
